Changes from jTDS 1.2.5
=======================

03/22/2012 - Holger Rehn
 o Applied patch [3476715] for bug [3260570] provided by Apaali, parsing
   time values containing fractions of seconds may fail.
 o Applied fix [3436324] suggested by Shane StClair, JtdsStatement.close()
   failed due to invalid state.

09/04/2011 - Holger Rehn
 o Applied patch [3290370] by Maarten van der Zwaart, re-send UDP recovery
   packet when connecting an SQL Server by instance name.
 o Applied patch [3224480] by Shane StClair, adding support for spatial types
   geometry/geography for TDS versions greater than 7.0.
 o Applied patch [3307731] by Rainer Schwarze, ResultSet cancellation may cause
   connection to be closed.
 o Applied backport of IPv6 support from 2.0 branch provided by George Dimitrov
   and his unit test for the URL parser (patch [3402583]).

01/02/2011 - Holger Rehn
 o Corrected bug [3141458], NPE if ResultSet.next() and ResultSet.close() are
   called by multiple threads concurrently.

10/07/2010 - Holger Rehn
 o Corrected bug [3078236], exception chaining time grows exponentially with
   number of exceptions in chain.
 o Corrected bug [3081749], SSPIJNIClient.getInstance() isn't thread-safe.
 o Corrected a bug in JtdsStatement.close(), any RuntimeException would have
   masked a prior SQLException.
 o Improved fix for bug [2931326], Statement.close() cannot throw NPE anymore.

05/17/2010 - Holger Rehn
 o Corrected bug [2931326], NPE if Statement.close() is called by multiple
   threads concurrently.
 o Applied fix for bug [3002431] by Rainer Schwarze, improved handling of port
   discovery errors.
 o Improved error messages if a value cannot be converted to a given SQL type.
 o Corrected bug [3000472], TimerThread started when closing last connection.
 o Fixed method synchronization in TimerThread.

===============================================================================
12/30/2009 - jTDS 1.2.5 released